KAF-120: Implement filing-received mapping/business logic
* Transforms a `FilingReceived` payload, a `Transaction` item  and a `Transaction` response model
  into a `MessageSend` request body.
* The request body is then sent to chs-kafka-api to be published to the message-send Kafka topic.